--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -44,6 +44,12 @@
                         <i class="bi bi-box-seam me-2"></i> View OnGoing Orders
                     </a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link text-white" routerLink="/news-management" routerLinkActive="active">
+                        <i class="bi bi-newspaper me-2"></i> News Management
+                    </a>
+                </li>
+
             </ul>
         </div>
     </div>
